Fix crash when looking up country for IP address

BUG: 303340